--- a/Flexbox e Grid/style.css
+++ b/Flexbox e Grid/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  background-color: #f7f7f7;
+  margin: 0px;
   display: grid;
-  justify-items: center;
   gap: 60px;
+  justify-items: center;
   margin-top: 60px;
+  background-color: #f7f7f7;
 }
 
 img {
@@ -17,31 +17,49 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
 p,
 h1,
 h2,
 h3 {
-  margin: 0;
+  margin: 0px;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
 }
 
 .menu {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 20px;
+  justify-content: center;
 }
 
 .menu a {
-  background-color: #ffffff;
-  padding: 15px 30px;
+  display: block;
+  background: #ffffff;
+  padding: 1rem 2rem;
   border-radius: 4px;
   color: #000000;
   text-transform: uppercase;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #e21;
 }
 
 .conteudo {
@@ -51,60 +69,128 @@ p {
 }
 
 .introducao {
-  background-color: #ffffff;
+  background: #fff;
   padding: 40px;
   text-align: right;
   position: relative;
   display: grid;
+  gap: 20px;
   align-content: center;
   justify-items: end;
-  gap: 20px;
 }
 
-.detalhe {
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
   width: 60px;
   height: 4px;
-  background-color: #e21;
+  background: #e21;
   position: absolute;
   top: 30px;
   right: -30px;
 }
 
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
+}
+
 .botao {
-  background-color: #e21;
-  color: #ffffff;
-  padding: 15px 30px;
+  background: #e21;
+  color: #fff;
+  padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
 }
 
-.subtitulo{
-  font-size: 64px;
+.botao:hover {
+  background: #900;
+}
+
+.subtitulo {
+  font-size: 4rem;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.2);
-  text-align: right ;
+  text-align: right;
   padding: 40px;
   align-self: center;
+  background-image: url("./img/onda.svg");
+  /* word-break: break-all; */
 }
-.vantagens{
-  background-color: #ffffff;
+
+.vantagens {
+  background: #fff;
   padding: 40px;
 }
-.vantagens-item{
+
+.vantagens-item {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+  border-left: 4px solid transparent;
 }
 
-.vantagens-item p{
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-color: #e21;
+}
+
+.vantagens-item p {
   grid-column: 2;
 }
 
-.rodape{
-  background-color: #ffffff;
+.rodape {
+  background: #fff;
   width: 100%;
   text-align: center;
   padding: 40px;
   box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
